--- a/views/result.html
+++ b/views/result.html
@@ -16,6 +16,10 @@
     <p>{{ analyze.text }}</p>
 
     <br>
+    <p>words_count:</p><hr>
+    <p>{{ analyze.words_count }}</p>
+
+    <br>
     <p>words_occur:</p><hr>
     <p>{{ analyze.words_occur }}</p>
 
