--- a/views/showAnalyses.html
+++ b/views/showAnalyses.html
@@ -12,6 +12,7 @@
                 <th>Text</th>
                 <th>Creation Date</th>
                 <th>Number Of Words</th>
+                <th>Longest Word</th>
                 <th>Number Of Letters</th>
                 <th>Letters Occurrences</th>
                 <th>Top 5 Words & Occurrences</th>
