parse given text and register analyze in db

--- a/views/result.html
+++ b/views/result.html
@@ -21,14 +21,14 @@
 
     <br>
     <p>letters_nb:</p><hr>
-    <p>{{ analyze.letters_nb }}</p>
+    <p>{{ analyze.letters_count }}</p>
 
     <br>
     <p>letters_nb_occur:</p><hr>
-    <p>{{ analyze.letters_nb_occur }}</p>
+    <p>{{ analyze.letters_occur }}</p>
 
     <br>
     <p>most_famous_words:</p><hr>
-    <p>{{ analyze.most_famous_words }}</p>
+    <p>{{ analyze.most_used_words }}</p>
 
 {% endblock %}
