add DELETE analyze method & impletment to_json method for analyze object

--- a/views/home.html
+++ b/views/home.html
@@ -70,9 +70,7 @@
                     Retourne les résultats d'une analyse
                 </td>
                 <td>
-                    name: id
-                    <br>
-                    type: integer
+                    None
                 </td>
             </tr>
             <tr>
@@ -86,9 +84,7 @@
                     Supprime une analyse
                 </td>
                 <td>
-                    name: id
-                    <br>
-                    type: integer
+                    None
                 </td>
             </tr>
         </tbody>
