--- a/views/showAnalyses.html
+++ b/views/showAnalyses.html
@@ -5,6 +5,10 @@
 
     <h4>They are {{ results|length }} analyses:</h4>
 
+    {% if message is defined  %}
+        <p class="red">{{ message }}</p>
+    {% endif %}
+
     <table class="highlight">
         <thead>
             <tr>
