Graph most letters occurrences & top 5 words occurences

--- a/views/showAnalyses.html
+++ b/views/showAnalyses.html
@@ -19,6 +19,8 @@
                 <th>Number Of Letters</th>
                 <th>Letters Occurrences</th>
                 <th>Top 5 Words & Occurrences</th>
+                <th>Letter Occurrence Graph Name</th>
+                <th>Words Occurrence Graph Name</th>
             </tr>
         </thead>
         <tbody>
